@@ -4,12 +4,10 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.google.common.collect.ImmutableList;
-
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.entries.LootTableReference;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraftforge.event.LootTableLoadEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
@@ -19,14 +17,12 @@ import sirttas.elementalcraft.api.ElementalCraftApi;
 @Mod.EventBusSubscriber(modid = ElementalCraftApi.MODID)
 public final class LootHandler {
 
-	private static final List<String> BLACKLIST = ImmutableList.of("dispenser");
-	public static final List<String> INJECT_lIST = ImmutableList.<String>builder()
-			.addAll(getInjects(EntityType.ZOMBIE, EntityType.ZOMBIE_VILLAGER, EntityType.SKELETON, EntityType.WITHER_SKELETON, EntityType.SILVERFISH, EntityType.IRON_GOLEM, EntityType.SKELETON_HORSE,
-					EntityType.CREEPER, EntityType.GHAST, EntityType.BLAZE, EntityType.HUSK, EntityType.MAGMA_CUBE, EntityType.ZOMBIFIED_PIGLIN, EntityType.ZOGLIN, EntityType.DROWNED,
-					EntityType.GUARDIAN, EntityType.ELDER_GUARDIAN, EntityType.SLIME, EntityType.STRAY, EntityType.SQUID, EntityType.POLAR_BEAR, EntityType.DOLPHIN, EntityType.COD, EntityType.SALMON,
-					EntityType.TROPICAL_FISH, EntityType.PUFFERFISH, EntityType.ENDERMAN, EntityType.SPIDER, EntityType.CAVE_SPIDER, EntityType.PHANTOM, EntityType.SHULKER))
-			.build();
-
+	private static final List<String> BLACKLIST = List.of("dispenser");
+	public static final List<String> INJECT_LIST = List.copyOf(getInjects(EntityType.ZOMBIE, EntityType.ZOMBIE_VILLAGER, EntityType.SKELETON, EntityType.WITHER_SKELETON, EntityType.SILVERFISH,
+			EntityType.IRON_GOLEM, EntityType.SKELETON_HORSE, EntityType.CREEPER, EntityType.GHAST, EntityType.BLAZE, EntityType.HUSK, EntityType.MAGMA_CUBE, EntityType.ZOMBIFIED_PIGLIN,
+			EntityType.ZOGLIN, EntityType.DROWNED, EntityType.GUARDIAN, EntityType.ELDER_GUARDIAN, EntityType.SLIME, EntityType.STRAY, EntityType.SQUID, EntityType.POLAR_BEAR, EntityType.DOLPHIN,
+			EntityType.COD, EntityType.SALMON, EntityType.TROPICAL_FISH, EntityType.PUFFERFISH, EntityType.ENDERMAN, EntityType.SPIDER, EntityType.CAVE_SPIDER, EntityType.PHANTOM,
+			EntityType.SHULKER));
 
 	private LootHandler() {}
 	
@@ -35,7 +31,7 @@ public final class LootHandler {
 		ResourceLocation name = evt.getName();
 		ResourceLocation injectName = ElementalCraft.createRL("inject/" + name.getPath());
 
-		if (INJECT_lIST.contains(name.getPath())) {
+		if (INJECT_LIST.contains(name.getPath())) {
 			evt.getTable().addPool(getInjectPool(injectName));
 		} else if (name.toString().startsWith("minecraft:chests/") && BLACKLIST.stream().anyMatch(name.toString()::contains)) {
 			evt.getTable().addPool(getInjectPool(ElementalCraft.createRL("chests/inject")));
